update (email and iframe)

--- a/AboutFFSNew.HTML
+++ b/AboutFFSNew.HTML
@@ -419,7 +419,7 @@
                     <br>
                     <p>Email Address</p>
                     <ul>
-                        <li><strong><span class="email">@gmail.com</span></strong></li>
+                        <li><strong><span class="email">johnbation96@gmail.com@gmail.com</span></strong></li>
                     </ul>
                 </div>
             </div>
