--- a/AboutFFSNew.HTML
+++ b/AboutFFSNew.HTML
@@ -438,7 +438,7 @@
                     <br>
                     <p>Email Address</p>
                     <ul>
-                        <li><strong><span class="email">@gmail.com</span></strong></li>
+                        <li><strong><span class="email">orliepineda06161967@gmail.com</span></strong></li>
                     </ul>
                 </div>
             </div>
