--- a/Paksiw.HTML
+++ b/Paksiw.HTML
@@ -137,7 +137,7 @@
         
         <div class="top-section">
             <div class="image">
-            <img src="FFS_Pics/Paksiw.jpg" alt="Goto image" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="FFS_Pics/PaksiwnaBangus.jpg" alt="Goto image" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
             <div class="recipes">
                 <dl>
