--- a/page1.html
+++ b/page1.html
@@ -259,7 +259,7 @@
                 </div>
 
                 <div class="dish">
-                    <a href="nialagang_baka.html">
+                    <a href="Nialagang-Baka.html">
                         <img src="FFS_Pics/Nilagang_Baka.jpg" alt="">
                         <div class="description">Nilagang Baka</div>
                     </a>           
