--- a/page5.html
+++ b/page5.html
@@ -60,7 +60,7 @@
         }
 
         .page-button:hover {
-            background-color: #deb887;
+            background-color: #b5b0a8;
             transform: translateY(-2px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             color: #000;
