removed bg in search results

--- a/FRecipe-search.html
+++ b/FRecipe-search.html
@@ -5,6 +5,9 @@
   <title>Search Results</title>
   <link rel="stylesheet" href="styleffs.css">
   <style>
+    body {
+      background: none;
+    }
     .gallery {
       display: flex;
       justify-content: space-evenly;
